[package]
name = "seamless"
version = "0.1.0"
edition = "2021"
authors = ["Quozul"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
clap = { version = "4.1", features = ["derive"] }
console = "0.15.5"
gifski = "1.10.3"
image = "0.24.6"
indicatif = "0.17.3"
rayon = "1.7.0"
