[package]
name = "seamless"
version = "0.1.0"
edition = "2021"
authors = ["Quozul"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
clap = { version = "4.5", features = ["derive"] }
console = "0.15.8"
gifski = "1.14.4"
image = "0.24.8"
indicatif = "0.17.8"
rayon = "1.8.1"
