[package]
name = "seamless"
version = "0.1.0"
edition = "2021"
authors = ["Quozul"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
clap = { version = "4.5", features = ["derive"] }
console = "0.15.10"
gifski = "1.32.0"
image = "0.25.5"
indicatif = "0.17.9"
rayon = "1.10.0"
